# mathlib

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: CONTRIBUTING.MD  PULL_REQUEST_TEMPLATE.MD
.github/workflows/: python-package.yml
core/: Cargo.toml  pyproject.toml
core/src/: lib.rs
mathlib/: __init__.py  basic.py  calculate.py  vector.py
mathlib.egg-info/: PKG-INFO  SOURCES.txt
mathlib/utils/: __init__.py  convert_to_num.py
tests/: test_basic.py  test_vector.py
